Implementado estrutura de pasta e pre-configuracao de test containers para subir o postgresql com docker